# cpplog-simple

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: simplelog.hpp
src/: simplelog.cpp
test/: test.cpp
